update ProductRecord Constructor to assign random uuid if null mm,